fix modal width on small screens

--- a/src/shared/ui/ConfirmModal/ConfirmModal.module.css
+++ b/src/shared/ui/ConfirmModal/ConfirmModal.module.css
@@ -35,9 +35,3 @@
 #redBttn:hover {
     background: rgb(202, 0, 0);
 }
-
-@media screen and (max-width: 770px) {
-    .dialogProduct {
-        width: 90%;
-    }
-}
